--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -265,6 +265,7 @@ label.section                     = Seccions:
 label.sections                    = # sections
 label.selectcourse                = Seleccioneu un curs:
 label.setMax                      = Canvia l'escala m\u00E0xima suggerida:
+label.showing                     = Showing:
 label.startdate                   = Data de refer\u00E8ncia inicial:
 label.type                        = Tipus:
 label.typecomponentevents         = # components-events type 
@@ -351,6 +352,7 @@ log.event.assignment_details_viewed                             = Assignment det
 log.event.assignment_override_created                           = Assignment override created
 log.event.assignment_override_deleted                           = Assignment override deleted
 log.event.assignment_override_updated                           = Assignment override updated
+log.event.assignment_submitted                                  = Assignment submitted
 log.event.attempt_deleted                                       = S'ha suprimit l'intent
 log.event.badge_archived                                        = S'ha arxivat la ins\u00EDgnia
 log.event.badge_awarded                                         = S'ha concedit la ins\u00EDgnia
@@ -491,6 +493,7 @@ log.event.grade_letter_updated                                  = Grade letter u
 log.event.grade_outcomes_report_viewed                          = S'ha visualitzat l'informe de resultats de qualificacions
 log.event.grade_overview_report_viewed                          = S'ha visualitzat l'informe de resum de qualificacions
 log.event.grade_single_view_report_viewed                       = S'ha visualitzat l'informe de vista \u00FAnica de qualificaci\u00F3.
+log.event.grade_submissions_page_viewed                         = Grade submissions page viewed
 log.event.grade_user_report_viewed                              = S'ha visualitzat l'informe d'usuari de qualificacions
 log.event.grader_report_viewed                                  = S'ha visualitzat l'informe del qualificador
 log.event.grading_form_viewed                                   = S'ha visualitzat el formulari de qualificaci\u00F3
@@ -800,17 +803,22 @@ passGradeColor = Passant el color de grau
 
 secondInterval = segon interval
 
-tab.activityCompletion = Compleci\u00F3 de l'activitat
-tab.component          = Components
-tab.coursemodule       = M\u00F2duls del curs
-tab.enrolleduser       = Enrolled
-tab.event              = Esdeveniments
-tab.grades             = Graus
-tab.logs               = Registres
-tab.noenrolleduser     = Not enrolled
-tab.risk               = Risk of dropping out
-tab.section            = Secci\u00F3
-tab.visualization      = Visual analytic
+tab.activityCompletion   = Compleci\u00F3 de l'activitat
+tab.component            = Components
+tab.coursemodule         = M\u00F2duls del curs
+tab.enrolleduser         = Enrolled
+tab.event                = Esdeveniments
+tab.grades               = Graus
+tab.logs                 = Registres
+tab.noenrolleduser       = Not enrolled
+tab.risk                 = Risk of dropping out
+tab.section              = Secci\u00F3
+tab.visualization        = Visual analytic
+
+tabs.ACTIVITY_COMPLETION = Visual analytic - Activity Completion
+tabs.GRADES              = Visual analytic - Grade
+tabs.LOGS                = Visual analytic - Logs
+tabs.RISK                = Risk of dropping out
 
 text.activitycompletion = Activities completion
 text.all                = All
