--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -265,6 +265,7 @@ label.section                     = Secciones:
 label.sections                    = # secciones
 label.selectcourse                = Por favor, seleccione un curso:
 label.setMax                      = Cambiar escala m\u00E1xima sugerida: 
+label.showing                     = Mostrando:
 label.startdate                   = Fecha de referencia inicial: 
 label.type                        = Tipo:
 label.typecomponentevents         = # tipos de componentes-evento
@@ -351,6 +352,7 @@ log.event.assignment_details_viewed                             = Detalles de la
 log.event.assignment_override_created                           = Assignment override created
 log.event.assignment_override_deleted                           = Assignment override deleted
 log.event.assignment_override_updated                           = Assignment override updated
+log.event.assignment_submitted                                  = Tarea enviada
 log.event.attempt_deleted                                       = Intento eliminado
 log.event.badge_archived                                        = Insignia archivada
 log.event.badge_awarded                                         = Insignia concedida
@@ -491,6 +493,7 @@ log.event.grade_letter_updated                                  = Grade letter u
 log.event.grade_outcomes_report_viewed                          = Informe de resultados visto
 log.event.grade_overview_report_viewed                          = Informe de resumen de notas visto
 log.event.grade_single_view_report_viewed                       = Informe de calificaci\u00F3n de vista simple visto.
+log.event.grade_submissions_page_viewed                         = P\u00E1gina de presentaci\u00F3n de calificaciones vista
 log.event.grade_user_report_viewed                              = Informe de notas de usuario visto
 log.event.grader_report_viewed                                  = Informe del examinador visto
 log.event.grading_form_viewed                                   = Formulario de calificaciones visto
@@ -800,17 +803,22 @@ passGradeColor = Color de calificaci\u00F3n aprobada
 
 secondInterval = Segundo intervalo
 
-tab.activityCompletion = Finalizaci\u00F3n Actividad
-tab.component          = Componentes
-tab.coursemodule       = M\u00F3dulos curso
-tab.enrolleduser       = Matriculados
-tab.event              = Eventos
-tab.grades             = Calificaciones
-tab.logs               = Registros
-tab.noenrolleduser     = No matriculados
-tab.risk               = Riesgo de abandono
-tab.section            = Secci\u00F3n
-tab.visualization      = An\u00E1lisis visual
+tab.activityCompletion   = Finalizaci\u00F3n Actividad
+tab.component            = Componentes
+tab.coursemodule         = M\u00F3dulos curso
+tab.enrolleduser         = Matriculados
+tab.event                = Eventos
+tab.grades               = Calificaciones
+tab.logs                 = Registros
+tab.noenrolleduser       = No matriculados
+tab.risk                 = Riesgo de abandono
+tab.section              = Secci\u00F3n
+tab.visualization        = An\u00E1lisis visual
+
+tabs.ACTIVITY_COMPLETION = An\u00E1lisis visual - Actividades finalizadas
+tabs.GRADES              = An\u00E1lisis visual - Calificaciones
+tabs.LOGS                = An\u00E1lisis visual - Registros
+tabs.RISK                = Riesgo de abandono
 
 text.activitycompletion = Actividades finalizadas
 text.all                = Todos
