--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -265,6 +265,7 @@ label.section                     = Des sections:
 label.sections                    = # sections
 label.selectcourse                = Veuillez choisir un cours:
 label.setMax                      = Changer l'\u00E9chelle max sugg\u00E9r\u00E9e:
+label.showing                     = Showing:
 label.startdate                   = Date de r\u00E9f\u00E9rence de d\u00E9part:
 label.type                        = Type:
 label.typecomponentevents         = # components-events type 
@@ -351,6 +352,7 @@ log.event.assignment_details_viewed                             = Assignment det
 log.event.assignment_override_created                           = Exception de devoir cr\u00E9\u00E9e
 log.event.assignment_override_deleted                           = Exception de devoir supprim\u00E9e
 log.event.assignment_override_updated                           = Exception de devoir modifi\u00E9e
+log.event.assignment_submitted                                  = Assignment submitted
 log.event.attempt_deleted                                       = Tentative supprim\u00E9e
 log.event.badge_archived                                        = Badge archiv\u00E9
 log.event.badge_awarded                                         = Badge d\u00E9cern\u00E9
@@ -491,6 +493,7 @@ log.event.grade_letter_updated                                  = Note lettre mo
 log.event.grade_outcomes_report_viewed                          = Rapport d'objectifs consult\u00E9
 log.event.grade_overview_report_viewed                          = Rapport d'ensemble consult\u00E9
 log.event.grade_single_view_report_viewed                       = Rapport d'\u00E9valuation simplifi\u00E9 consult\u00E9
+log.event.grade_submissions_page_viewed                         = Grade submissions page viewed
 log.event.grade_user_report_viewed                              = Rapport d'\u00E9valuation utilisateur consult\u00E9
 log.event.grader_report_viewed                                  = Rapport de l'\u00E9valuateur consult\u00E9
 log.event.grading_form_viewed                                   = Formulaire d'\u00E9valuation consult\u00E9
@@ -800,17 +803,22 @@ passGradeColor = En passant la couleur de qualit\u00E9
 
 secondInterval = deuxi\u00E8me intervalle
 
-tab.activityCompletion = Ach\u00E8vement d'activit\u00E9s
-tab.component          = Composants
-tab.coursemodule       = Modules de cours
-tab.enrolleduser       = Enrolled
-tab.event              = \u00C9v\u00E9nements
-tab.grades             = Les notes
-tab.logs               = Les journaux
-tab.noenrolleduser     = Not enrolled
-tab.risk               = Risk of dropping out
-tab.section            = Section
-tab.visualization      = Visual analytic
+tab.activityCompletion   = Ach\u00E8vement d'activit\u00E9s
+tab.component            = Composants
+tab.coursemodule         = Modules de cours
+tab.enrolleduser         = Enrolled
+tab.event                = \u00C9v\u00E9nements
+tab.grades               = Les notes
+tab.logs                 = Les journaux
+tab.noenrolleduser       = Not enrolled
+tab.risk                 = Risk of dropping out
+tab.section              = Section
+tab.visualization        = Visual analytic
+
+tabs.ACTIVITY_COMPLETION = Visual analytic - Activity Completion
+tabs.GRADES              = Visual analytic - Grades
+tabs.LOGS                = Visual analytic - Logs
+tabs.RISK                = Risk of dropping out
 
 text.activitycompletion = Activities completion
 text.all                = All
