--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -265,6 +265,7 @@ label.section                     = Sezioni:
 label.sections                    = # sections
 label.selectcourse                = Per favore, seleziona un corso:
 label.setMax                      = Modifica scala massima suggerita:
+label.showing                     = Showing:
 label.startdate                   = Inizia la data di riferimento:
 label.type                        = Genere:
 label.typecomponentevents         = # components-events type 
@@ -351,6 +352,7 @@ log.event.assignment_details_viewed                             = Assignment det
 log.event.assignment_override_created                           = Creata personalizzazione del compito
 log.event.assignment_override_deleted                           = Eliminata personalizzazione del compito
 log.event.assignment_override_updated                           = Aggiornata personalizzazione del compito
+log.event.assignment_submitted                                  = Assignment submitted
 log.event.attempt_deleted                                       = Eliminato tentativo
 log.event.badge_archived                                        = Archiviato badge
 log.event.badge_awarded                                         = Badge rilasciati
@@ -491,6 +493,7 @@ log.event.grade_letter_updated                                  = Aggiornata gra
 log.event.grade_outcomes_report_viewed                          = Visualizzato report obiettivi
 log.event.grade_overview_report_viewed                          = Visualizzata scheda globale utente
 log.event.grade_single_view_report_viewed                       = Visualizzato report scheda singola
+log.event.grade_submissions_page_viewed                         = Grade submissions page viewed
 log.event.grade_user_report_viewed                              = Visualizzata scheda individuale
 log.event.grader_report_viewed                                  = Visualizzato registro valutatore
 log.event.grading_form_viewed                                   = Visualizzato schema di valutazione
@@ -800,17 +803,22 @@ passGradeColor = Passando colore grade
 
 secondInterval = Secondo intervallo
 
-tab.activityCompletion = Completamento attivit\u00E0
-tab.component          = componenti
-tab.coursemodule       = Moduli del corso
-tab.enrolleduser       = Enrolled
-tab.event              = eventi
-tab.grades             = gradi
-tab.logs               = logs
-tab.noenrolleduser     = Not enrolled
-tab.risk               = Risk of dropping out
-tab.section            = Sezione
-tab.visualization      = Visual analytic
+tab.activityCompletion   = Completamento attivit\u00E0
+tab.component            = componenti
+tab.coursemodule         = Moduli del corso
+tab.enrolleduser         = Enrolled
+tab.event                = eventi
+tab.grades               = gradi
+tab.logs                 = logs
+tab.noenrolleduser       = Not enrolled
+tab.risk                 = Risk of dropping out
+tab.section              = Sezione
+tab.visualization        = Visual analytic
+
+tabs.ACTIVITY_COMPLETION = Visual analytic - Activity Completion
+tabs.GRADES              = Visual analytic - Grades
+tabs.LOGS                = Visual analytic - Logs
+tabs.RISK                = Risk of dropping out
 
 text.activitycompletion = Activities completion
 text.all                = All
