--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -265,6 +265,7 @@ label.section                     = Se\u00E7\u00F5es:
 label.sections                    = # sections
 label.selectcourse                = Por favor, selecione um curso:
 label.setMax                      = Alterar escala m\u00E1xima sugerida:
+label.showing                     = Showing:
 label.startdate                   = Data de refer\u00EAncia inicial:
 label.type                        = Tipo:
 label.typecomponentevents         = # components-events type 
@@ -351,6 +352,7 @@ log.event.assignment_details_viewed                             = Assignment det
 log.event.assignment_override_created                           = Exce\u00E7\u00E3o para trabalho criada
 log.event.assignment_override_deleted                           = Exce\u00E7\u00E3o para trabalho apagada
 log.event.assignment_override_updated                           = Exce\u00E7\u00E3o para trabalho atualizada
+log.event.assignment_submitted                                  = Assignment submitted
 log.event.attempt_deleted                                       = Tentativa eliminada
 log.event.badge_archived                                        = Medalha arquivada
 log.event.badge_awarded                                         = Medalha atribu\u00EDda
@@ -491,6 +493,7 @@ log.event.grade_letter_updated                                  = Nota alfab\u00
 log.event.grade_outcomes_report_viewed                          = Relat\u00F3rio dos resultados da aprendizagem visualizado
 log.event.grade_overview_report_viewed                          = Relat\u00F3rio de pauta global visualizado
 log.event.grade_single_view_report_viewed                       = Relat\u00F3rio de vista simples visualizado
+log.event.grade_submissions_page_viewed                         = Grade submissions page viewed
 log.event.grade_user_report_viewed                              = Relat\u00F3rio de notas do utilizador visualizado
 log.event.grader_report_viewed                                  = Relat\u00F3rio de avaliador visualizado
 log.event.grading_form_viewed                                   = Formul\u00E1rio de avalia\u00E7\u00E3o visualizado
@@ -800,17 +803,22 @@ passGradeColor = Passando cor grau
 
 secondInterval = Segundo intervalo
 
-tab.activityCompletion = Conclus\u00E3o das atividades
-tab.component          = Componentes
-tab.coursemodule       = M\u00F3dulos do curso
-tab.enrolleduser       = Enrolled
-tab.event              = Eventos
-tab.grades             = Notas
-tab.logs               = Logs
-tab.noenrolleduser     = Not enrolled
-tab.risk               = Risk of dropping out
-tab.section            = Se\u00E7\u00E3o
-tab.visualization      = Visual analytic
+tab.activityCompletion   = Conclus\u00E3o das atividades
+tab.component            = Componentes
+tab.coursemodule         = M\u00F3dulos do curso
+tab.enrolleduser         = Enrolled
+tab.event                = Eventos
+tab.grades               = Notas
+tab.logs                 = Logs
+tab.noenrolleduser       = Not enrolled
+tab.risk                 = Risk of dropping out
+tab.section              = Se\u00E7\u00E3o
+tab.visualization        = Visual analytic
+
+tabs.ACTIVITY_COMPLETION = Visual analytic - Activity Completion
+tabs.GRADES              = Visual analytic - Grades
+tabs.LOGS                = Visual analytic - Logs
+tabs.RISK                = Risk of dropping out
 
 text.activitycompletion = Activities completion
 text.all                = All
