--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -265,6 +265,7 @@ label.section                     = Abschnitt:
 label.sections                    = # sections
 label.selectcourse                = Bitte w\u00E4hlen Sie einen Kurs aus:
 label.setMax                      = Vorgeschlagene maximale Skala \u00E4ndern:
+label.showing                     = Showing:
 label.startdate                   = Startbezugsdatum:
 label.type                        = Art:
 label.typecomponentevents         = # components-events type 
@@ -351,6 +352,7 @@ log.event.assignment_details_viewed                             = Assignment det
 log.event.assignment_override_created                           = Verf\u00FCgbarkeits\u00E4nderung f\u00FCr Aufgaben angelegt
 log.event.assignment_override_deleted                           = Verf\u00FCgbarkeits\u00E4nderungen f\u00FCr Aufgaben gel\u00F6scht
 log.event.assignment_override_updated                           = Verf\u00FCgbarkeits\u00E4nderungen f\u00FCr Aufgaben bearbeitet
+log.event.assignment_submitted                                  = Assignment submitted
 log.event.attempt_deleted                                       = Versuch gel\u00F6scht
 log.event.badge_archived                                        = Badge archiviert
 log.event.badge_awarded                                         = Badge verliehen
@@ -491,6 +493,7 @@ log.event.grade_letter_updated                                  = Berwertungssch
 log.event.grade_outcomes_report_viewed                          = Ergebnis\u00FCbersicht angezeigt
 log.event.grade_overview_report_viewed                          = \u00DCbersicht angezeigt
 log.event.grade_single_view_report_viewed                       = Bewertungsbericht mit Einzelbildansichten angezeigt
+log.event.grade_submissions_page_viewed                         = Grade submissions page viewed
 log.event.grade_user_report_viewed                              = Bewertungs\u00FCbersicht angezeigt
 log.event.grader_report_viewed                                  = Bewerter\u00FCbersicht angezeigt
 log.event.grading_form_viewed                                   = Bewertungsformular angezeigt
@@ -800,17 +803,22 @@ passGradeColor = Passing Grad Farbe
 
 secondInterval = Sekunden-Intervall
 
-tab.activityCompletion = Aktivit\u00E4tsabschluss
-tab.component          = Komponenten
-tab.coursemodule       = Kursmodule
-tab.enrolleduser       = Enrolled
-tab.event              = Veranstaltungen
-tab.grades             = Noten
-tab.logs               = Protokolle
-tab.noenrolleduser     = Not enrolled
-tab.risk               = Risk of dropping out
-tab.section            = Abschnitt
-tab.visualization      = Visual analytic
+tab.activityCompletion   = Aktivit\u00E4tsabschluss
+tab.component            = Komponenten
+tab.coursemodule         = Kursmodule
+tab.enrolleduser         = Enrolled
+tab.event                = Veranstaltungen
+tab.grades               = Noten
+tab.logs                 = Protokolle
+tab.noenrolleduser       = Not enrolled
+tab.risk                 = Risk of dropping out
+tab.section              = Abschnitt
+tab.visualization        = Visual analytic
+
+tabs.ACTIVITY_COMPLETION = Visual analytic - Activity Completion
+tabs.GRADES              = Visual analytic - Grades
+tabs.LOGS                = Visual analytic - Logs
+tabs.RISK                = Risk of dropping out
 
 text.activitycompletion = Activities completion
 text.all                = All
