--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -265,6 +265,7 @@ label.section                     = Section:
 label.sections                    = # sections
 label.selectcourse                = Please, select a course:
 label.setMax                      = Change suggested max scale: 
+label.showing                     = Showing:
 label.startdate                   = Start reference date: 
 label.type                        = Type:
 label.typecomponentevents         = # components-events type 
@@ -351,6 +352,7 @@ log.event.assignment_details_viewed                             = Assignment det
 log.event.assignment_override_created                           = Assignment override created
 log.event.assignment_override_deleted                           = Assignment override deleted
 log.event.assignment_override_updated                           = Assignment override updated
+log.event.assignment_submitted                                  = Assignment submitted
 log.event.attempt_deleted                                       = Attempt deleted
 log.event.badge_archived                                        = Badge archived
 log.event.badge_awarded                                         = Badge awarded
@@ -491,6 +493,7 @@ log.event.grade_letter_updated                                  = Grade letter u
 log.event.grade_outcomes_report_viewed                          = Grade outcomes report viewed
 log.event.grade_overview_report_viewed                          = Grade overview report viewed
 log.event.grade_single_view_report_viewed                       = Grade single view report viewed.
+log.event.grade_submissions_page_viewed                         = Grade submissions page viewed
 log.event.grade_user_report_viewed                              = Grade user report viewed
 log.event.grader_report_viewed                                  = Grader report viewed
 log.event.grading_form_viewed                                   = Grading form viewed
@@ -800,17 +803,22 @@ passGradeColor = Passing grade color
 
 secondInterval = Second interval
 
-tab.activityCompletion = Activity Completion
-tab.component          = Components
-tab.coursemodule       = Course Modules
-tab.enrolleduser       = Enrolled
-tab.event              = Events
-tab.grades             = Grades
-tab.logs               = Logs
-tab.noenrolleduser     = Not enrolled
-tab.risk               = Risk of dropping out
-tab.section            = Sections
-tab.visualization      = Visual analytic
+tab.activityCompletion   = Activity Completion
+tab.component            = Components
+tab.coursemodule         = Course Modules
+tab.enrolleduser         = Enrolled
+tab.event                = Events
+tab.grades               = Grades
+tab.logs                 = Logs
+tab.noenrolleduser       = Not enrolled
+tab.risk                 = Risk of dropping out
+tab.section              = Sections
+tab.visualization        = Visual analytic
+
+tabs.ACTIVITY_COMPLETION = Visual analytic - Activity Completion
+tabs.GRADES              = Visual analytic - Grades
+tabs.LOGS                = Visual analytic - Logs
+tabs.RISK                = Risk of dropping out
 
 text.activitycompletion = Activities completion
 text.all                = All
