Added translates and traduction

--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -3,14 +3,25 @@ ACTIVITIES_TABLE = Finalizaci\u00F3n Actividad
 
 BOXPLOT = Boxplot
 
-BOXPLOT.xAxisTitle = \u00CDtems de calificaci\u00F3n
-BOXPLOT.yAxisTitle = Calificaciones
+BOXPLOT.xAxisTitle          = \u00CDtems de calificaci\u00F3n
+BOXPLOT.yAxisTitle          = Calificaciones
 
-BUBBLE = Compromiso
+BOXPLOT_LOG = Boxplot Elem.
+
+BOXPLOT_LOG.yAxisTitle      = Registros
+
+BOXPLOT_LOG_TIME = Boxplot Tiempo
+
+BOXPLOT_LOG_TIME.xAxisTitle = {0}
+BOXPLOT_LOG_TIME.yAxisTitle = Registros
+
+BUBBLE = Compromiso (Lineal)
 
 BUBBLE.limitDays              = L\u00EDmite m\u00E1ximo
 BUBBLE.xAxisTitle             = D\u00EDas transcurridos del \u00FAltimo acceso al Curso hasta {0}
 BUBBLE.yAxisTitle             = D\u00EDas transcurridos del \u00FAltimo acceso a MoodleS hasta {0}
+
+BUBBLE_LOGARITHMIC = Compromiso (Log.)
 
 BUBBLE_LOGARITHMIC.xAxisTitle = Tiempo transcurrido del \u00FAltimo acceso al Curso hasta {0}
 BUBBLE_LOGARITHMIC.yAxisTitle = Tiempo transcurrido del \u00FAltimo acceso a Moodle hasta {0}
@@ -78,14 +89,25 @@ STACKED_BAR = Barras Apiladas
 STACKED_BAR.xAxisTitle = {0}
 STACKED_BAR.yAxisTitle = Registros
 
+TABLE_LOG = Tabla
+
 TOTAL_BAR = Total
 
 TOTAL_BAR.yAxisTitle = Registros
 
 VIOLIN = Violin
 
-VIOLIN.xAxisTitle = \u00CDtems de calificaci\u00F3n
-VIOLIN.yAxisTitle = Calificaciones
+VIOLIN.xAxisTitle          = \u00CDtems de calificaci\u00F3n
+VIOLIN.yAxisTitle          = Calificaciones
+
+VIOLIN_LOG = Viol\u00EDn Elem.
+
+VIOLIN_LOG.yAxisTitle      = Registros
+
+VIOLIN_LOG_TIME = Viol\u00EDn Tiempo
+
+VIOLIN_LOG_TIME.xAxisTitle = {0}
+VIOLIN_LOG_TIME.yAxisTitle = Registros
 
 about_app = Acerca de la aplicaci\u00F3n
 
@@ -862,6 +884,7 @@ text.recent             = Recientes
 text.restoredefault     = \u00BFSeguro que desea restaurar la configuraci\u00F3n predeterminada?
 text.search             = Buscar
 text.seconds            = segundos
+text.section            = Secci\u00F3n
 text.sectionplaceholder = P\u00E1gina principal
 text.see                = Ver 
 text.selectall          = Seleccionar/Deseleccionar todos
