--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -3,14 +3,25 @@ ACTIVITIES_TABLE = Ach\u00E8vement d'activit\u00E9s
 
 BOXPLOT = Boxplot
 
-BOXPLOT.xAxisTitle = Articles de grade
-BOXPLOT.yAxisTitle = Grades
+BOXPLOT.xAxisTitle          = Articles de grade
+BOXPLOT.yAxisTitle          = Grades
 
-BUBBLE = Engagement
+BOXPLOT_LOG = Boxplot Item
+
+BOXPLOT_LOG.yAxisTitle      = Journaux
+
+BOXPLOT_LOG_TIME = Boxplot Time
+
+BOXPLOT_LOG_TIME.xAxisTitle = {0}
+BOXPLOT_LOG_TIME.yAxisTitle = Journaux
+
+BUBBLE = Engagement (Linear)
 
 BUBBLE.limitDays              = Maximum limit
 BUBBLE.xAxisTitle             = Days after the last access to the Course until {0}
 BUBBLE.yAxisTitle             = Days after the last access to Moodle until {0}
+
+BUBBLE_LOGARITHMIC = Engagement (Log.)
 
 BUBBLE_LOGARITHMIC.xAxisTitle = Time after the last access to the Course until {0}
 BUBBLE_LOGARITHMIC.yAxisTitle = Time after the last access to Moodle until {0}
@@ -78,14 +89,25 @@ STACKED_BAR = Bar Empil\u00E9e
 STACKED_BAR.xAxisTitle = {0}
 STACKED_BAR.yAxisTitle = Journaux
 
+TABLE_LOG = Table
+
 TOTAL_BAR = Total
 
 TOTAL_BAR.yAxisTitle = Journaux
 
 VIOLIN = Violin
 
-VIOLIN.xAxisTitle = Articles de grade
-VIOLIN.yAxisTitle = Grades
+VIOLIN.xAxisTitle          = Articles de grade
+VIOLIN.yAxisTitle          = Grades
+
+VIOLIN_LOG = Violin Item
+
+VIOLIN_LOG.yAxisTitle      = Journaux
+
+VIOLIN_LOG_TIME = Violin Time
+
+VIOLIN_LOG_TIME.xAxisTitle = {0}
+VIOLIN_LOG_TIME.yAxisTitle = Journaux
 
 about_app = A propos de l'application
 
@@ -862,6 +884,7 @@ text.recent             = R\u00E9cente
 text.restoredefault     = Etes-vous s\u00FBr que vous voulez restaurer les param\u00E8tres par d\u00E9faut?
 text.search             = Search
 text.seconds            = Secondes
+text.section            = Section
 text.sectionplaceholder = Page de garde
 text.see                = See 
 text.selectall          = Select/Deselect all
