--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -3,14 +3,25 @@ ACTIVITIES_TABLE = Conclus\u00E3o das atividades
 
 BOXPLOT = Boxplot
 
-BOXPLOT.xAxisTitle = Artigos da categoria
-BOXPLOT.yAxisTitle = Notas
+BOXPLOT.xAxisTitle          = Artigos da categoria
+BOXPLOT.yAxisTitle          = Notas
 
-BUBBLE = Engagement
+BOXPLOT_LOG = Boxplot Item
+
+BOXPLOT_LOG.yAxisTitle      = Hist\u00F3rico
+
+BOXPLOT_LOG_TIME = Boxplot Time
+
+BOXPLOT_LOG_TIME.xAxisTitle = {0}
+BOXPLOT_LOG_TIME.yAxisTitle = Hist\u00F3rico
+
+BUBBLE = Engagement (Linear)
 
 BUBBLE.limitDays              = Maximum limit
 BUBBLE.xAxisTitle             = Days after the last access to the Course until {0}
 BUBBLE.yAxisTitle             = Days after the last access to Moodle until {0}
+
+BUBBLE_LOGARITHMIC = Engagement (Log.)
 
 BUBBLE_LOGARITHMIC.xAxisTitle = Time after the last access to the Course until {0}
 BUBBLE_LOGARITHMIC.yAxisTitle = Time after the last access to Moodle until {0}
@@ -78,14 +89,25 @@ STACKED_BAR = Bar Empilhados
 STACKED_BAR.xAxisTitle = {0}
 STACKED_BAR.yAxisTitle = Hist\u00F3rico
 
+TABLE_LOG = Table
+
 TOTAL_BAR = Total
 
 TOTAL_BAR.yAxisTitle = Hist\u00F3rico
 
 VIOLIN = Violin
 
-VIOLIN.xAxisTitle = Artigos da categoria
-VIOLIN.yAxisTitle = Notas
+VIOLIN.xAxisTitle          = Artigos da categoria
+VIOLIN.yAxisTitle          = Notas
+
+VIOLIN_LOG = Violin Item
+
+VIOLIN_LOG.yAxisTitle      = Hist\u00F3rico
+
+VIOLIN_LOG_TIME = Violin Time
+
+VIOLIN_LOG_TIME.xAxisTitle = {0}
+VIOLIN_LOG_TIME.yAxisTitle = Hist\u00F3rico
 
 about_app = Sobre a aplica\u00E7\u00E3o
 
@@ -862,6 +884,7 @@ text.recent             = Recentes
 text.restoredefault     = Tem certeza de que deseja restaurar as configura\u00E7\u00F5es padr\u00E3o?
 text.search             = Search
 text.seconds            = Segundos
+text.section            = Se\u00E7\u00E3o
 text.sectionplaceholder = Primeira p\u00E1gina
 text.see                = See 
 text.selectall          = Select/Deselect all
