--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -3,14 +3,25 @@ ACTIVITIES_TABLE = Compleci\u00F3 de l'activitat
 
 BOXPLOT = Diagramacaja
 
-BOXPLOT.xAxisTitle = Els elements de qualificaci\u00F3
-BOXPLOT.yAxisTitle = Noten
+BOXPLOT.xAxisTitle          = Els elements de qualificaci\u00F3
+BOXPLOT.yAxisTitle          = Noten
 
-BUBBLE = Engagement
+BOXPLOT_LOG = Boxplot Item
+
+BOXPLOT_LOG.yAxisTitle      = Registres
+
+BOXPLOT_LOG_TIME = Boxplot Time
+
+BOXPLOT_LOG_TIME.xAxisTitle = {0}
+BOXPLOT_LOG_TIME.yAxisTitle = Registres
+
+BUBBLE = Engagement (Linear)
 
 BUBBLE.limitDays              = Maximum limit
 BUBBLE.xAxisTitle             = Days after the last access to the Course until {0}
 BUBBLE.yAxisTitle             = Days after the last access to Moodle until {0}
+
+BUBBLE_LOGARITHMIC = Engagement (Log.)
 
 BUBBLE_LOGARITHMIC.xAxisTitle = Time after the last access to the Course until {0}
 BUBBLE_LOGARITHMIC.yAxisTitle = Time after the last access to Moodle until {0}
@@ -78,14 +89,25 @@ STACKED_BAR = Barres Apilades
 STACKED_BAR.xAxisTitle = {0}
 STACKED_BAR.yAxisTitle = Registres
 
+TABLE_LOG = Table
+
 TOTAL_BAR = Total
 
 TOTAL_BAR.yAxisTitle = Registres
 
 VIOLIN = Violin
 
-VIOLIN.xAxisTitle = Els elements de qualificaci\u00F3
-VIOLIN.yAxisTitle = Noten
+VIOLIN.xAxisTitle          = Els elements de qualificaci\u00F3
+VIOLIN.yAxisTitle          = Noten
+
+VIOLIN_LOG = Violin Item
+
+VIOLIN_LOG.yAxisTitle      = Registres
+
+VIOLIN_LOG_TIME = Violin Time
+
+VIOLIN_LOG_TIME.xAxisTitle = {0}
+VIOLIN_LOG_TIME.yAxisTitle = Registres
 
 about_app = Quant a l'aplicaci\u00F3
 
@@ -862,6 +884,7 @@ text.recent             = Recents
 text.restoredefault     = Esteu segur que voleu restaurar la configuraci\u00F3 per defecte?
 text.search             = Search
 text.seconds            = Segons
+text.section            = Secci\u00F3
 text.sectionplaceholder = Portada
 text.see                = See 
 text.selectall          = Select/Deselect all
