--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -3,14 +3,25 @@ ACTIVITIES_TABLE = Activity Completion
 
 BOXPLOT = Boxplot
 
-BOXPLOT.xAxisTitle = Grade items
-BOXPLOT.yAxisTitle = Grades
+BOXPLOT.xAxisTitle          = Grade items
+BOXPLOT.yAxisTitle          = Grades
 
-BUBBLE = Engagement
+BOXPLOT_LOG = Boxplot Item
+
+BOXPLOT_LOG.yAxisTitle      = Logs
+
+BOXPLOT_LOG_TIME = Boxplot Time
+
+BOXPLOT_LOG_TIME.xAxisTitle = {0}
+BOXPLOT_LOG_TIME.yAxisTitle = Logs
+
+BUBBLE = Engagement (Linear)
 
 BUBBLE.limitDays              = Maximum limit
 BUBBLE.xAxisTitle             = Days after the last access to the Course until {0}
 BUBBLE.yAxisTitle             = Days after the last access to Moodle until {0}
+
+BUBBLE_LOGARITHMIC = Engagement (Log.)
 
 BUBBLE_LOGARITHMIC.xAxisTitle = Time after the last access to the Course until {0}
 BUBBLE_LOGARITHMIC.yAxisTitle = Time after the last access to Moodle until {0}
@@ -78,14 +89,25 @@ STACKED_BAR = Stacked Bar
 STACKED_BAR.xAxisTitle = {0}
 STACKED_BAR.yAxisTitle = Logs
 
+TABLE_LOG = Table
+
 TOTAL_BAR = Total
 
 TOTAL_BAR.yAxisTitle = Logs
 
 VIOLIN = Violin
 
-VIOLIN.xAxisTitle = Grade items
-VIOLIN.yAxisTitle = Grades
+VIOLIN.xAxisTitle          = Grade items
+VIOLIN.yAxisTitle          = Grades
+
+VIOLIN_LOG = Violin Item
+
+VIOLIN_LOG.yAxisTitle      = Logs
+
+VIOLIN_LOG_TIME = Violin Time
+
+VIOLIN_LOG_TIME.xAxisTitle = {0}
+VIOLIN_LOG_TIME.yAxisTitle = Logs
 
 about_app = About application
 
@@ -862,6 +884,7 @@ text.recent             = Recent
 text.restoredefault     = Are you sure you want to restore the default settings?
 text.search             = Search
 text.seconds            = Seconds
+text.section            = Sections
 text.sectionplaceholder = Front page
 text.see                = See 
 text.selectall          = Select/Deselect all
