--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -3,14 +3,25 @@ ACTIVITIES_TABLE = Completamento attivit\u00E0
 
 BOXPLOT = Boxplot
 
-BOXPLOT.xAxisTitle = Alementi del grado
-BOXPLOT.yAxisTitle = Gradi
+BOXPLOT.xAxisTitle          = Alementi del grado
+BOXPLOT.yAxisTitle          = Gradi
 
-BUBBLE = Engagement
+BOXPLOT_LOG = Boxplot Item
+
+BOXPLOT_LOG.yAxisTitle      = Logs
+
+BOXPLOT_LOG_TIME = Boxplot Time
+
+BOXPLOT_LOG_TIME.xAxisTitle = {0}
+BOXPLOT_LOG_TIME.yAxisTitle = Logs
+
+BUBBLE = Engagement (Linear)
 
 BUBBLE.limitDays              = Maximum limit
 BUBBLE.xAxisTitle             = Days after the last access to the Course until {0}
 BUBBLE.yAxisTitle             = Days after the last access to Moodle until {0}
+
+BUBBLE_LOGARITHMIC = Engagement (Log.)
 
 BUBBLE_LOGARITHMIC.xAxisTitle = Time after the last access to the Course until {0}
 BUBBLE_LOGARITHMIC.yAxisTitle = Time after the last access to Moodle until {0}
@@ -78,14 +89,25 @@ STACKED_BAR = A Barre In Pila
 STACKED_BAR.xAxisTitle = {0}
 STACKED_BAR.yAxisTitle = Logs
 
+TABLE_LOG = Table
+
 TOTAL_BAR = Total
 
 TOTAL_BAR.yAxisTitle = Logs
 
 VIOLIN = Violin
 
-VIOLIN.xAxisTitle = Alementi del grado
-VIOLIN.yAxisTitle = Gradi
+VIOLIN.xAxisTitle          = Alementi del grado
+VIOLIN.yAxisTitle          = Gradi
+
+VIOLIN_LOG = Violin Item
+
+VIOLIN_LOG.yAxisTitle      = Logs
+
+VIOLIN_LOG_TIME = Violin Time
+
+VIOLIN_LOG_TIME.xAxisTitle = {0}
+VIOLIN_LOG_TIME.yAxisTitle = Logs
 
 about_app = Informazioni sull'applicazione
 
@@ -862,6 +884,7 @@ text.recent             = Recente
 text.restoredefault     = Sei sicuro di voler ripristinare le impostazioni di default?
 text.search             = Search
 text.seconds            = secondi
+text.section            = Sezione
 text.sectionplaceholder = Prima pagina
 text.see                = See 
 text.selectall          = Select/Deselect all
