--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -144,6 +144,7 @@ clustering.logTypes                      = Tipos de registros
 clustering.manageLabels                  = Gestionar etiquetas
 clustering.maxIterations                 = M\u00E1x. n\u00FAmero de iteraciones
 clustering.minPts                        = M\u00EDn. de puntos por agrupaci\u00F3n
+clustering.noLabels                      = No se han creado etiquetas
 clustering.numTrials                     = N\u00FAmero de intentos
 clustering.numberOfClusters              = N\u00FAmero de agrupaciones
 clustering.reduce                        = Reducir dimensi\u00F3n
