--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -144,6 +144,7 @@ clustering.logTypes                      = Types of logs
 clustering.manageLabels                  = Manage labels
 clustering.maxIterations                 = Max number of iterations
 clustering.minPts                        = Min. points per cluster
+clustering.noLabels                      = No labels have been created
 clustering.numTrials                     = Number of trial
 clustering.numberOfClusters              = Number of clusters
 clustering.reduce                        = Reduce dimension
