Change login method

--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -301,6 +301,8 @@ legendActive = Diagrammlegende
 
 limitDays = Limit days
 
+listCharts = Charts available
+
 log.component.activity_report                                   = Kursaktivit\u00E4t
 log.component.assignment                                        = Aufgabe
 log.component.book                                              = Buch
