--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -301,6 +301,8 @@ legendActive = Chart legend
 
 limitDays = Limit days
 
+listCharts = Charts available
+
 log.component.activity_report                                   = Activity report
 log.component.assignment                                        = Assignment
 log.component.book                                              = Book
