--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -301,6 +301,8 @@ legendActive = Leyenda del gr\u00E1fico
 
 limitDays = L\u00EDmite de d\u00EDas
 
+listCharts = Charts available
+
 log.component.activity_report                                   = Actividad del curso
 log.component.assignment                                        = Tarea
 log.component.book                                              = Libro
