--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -301,6 +301,8 @@ legendActive = Graphique l\u00E9gende
 
 limitDays = Limit days
 
+listCharts = Charts available
+
 log.component.activity_report                                   = Activit\u00E9s du cours
 log.component.assignment                                        = Devoir
 log.component.book                                              = Livre
