--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -301,6 +301,8 @@ legendActive = Grafico leggenda
 
 limitDays = Limit days
 
+listCharts = Charts available
+
 log.component.activity_report                                   = Attivit\u00E0 del corso
 log.component.assignment                                        = Compito
 log.component.book                                              = Libro
