--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -301,6 +301,8 @@ legendActive = Legenda do gr\u00E1fico
 
 limitDays = Limit days
 
+listCharts = Charts available
+
 log.component.activity_report                                   = Relat\u00F3rio de atividades
 log.component.assignment                                        = Trabalho
 log.component.book                                              = Livro
