--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -301,6 +301,8 @@ legendActive = Llegenda de l'gr\u00E0fic
 
 limitDays = Limit days
 
+listCharts = Gr\u00E1ficas disponibles
+
 log.component.activity_report                                   = Informe d'activitat
 log.component.assignment                                        = Tasca
 log.component.book                                              = Llibre
