Internacionalización y otros cambios

--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -117,7 +117,9 @@ clustering.2Dgraph                       = Gr\u00E1fico 2D
 clustering.3Dgraph                       = Gr\u00E1fico 3D
 clustering.analyze                       = Analizar
 clustering.analyze.elbow                 = M\u00E9todo del codo
+clustering.analyze.elbow.yLabel          = Total de la suma de cuadrados dentro del grupo
 clustering.analyze.silhouette            = M\u00E9todo de silueta
+clustering.analyze.silhouette.yLabel     = Anchura media de la silueta
 clustering.centroid                      = Centroide
 clustering.centroids                     = Centroides
 clustering.cluster                       = Agrupaci\u00F3n
@@ -150,6 +152,7 @@ clustering.numberOfClusters              = N\u00FAmero de agrupaciones
 clustering.reduce                        = Reducir dimensi\u00F3n
 clustering.removeLabels                  = Borrar seleccionados
 clustering.silhouetteAnalysis            = An\u00E1lisis de silueta
+clustering.silhouetteWidth               = Ancho de silueta
 clustering.standard                      = Normal
 clustering.table                         = Tabla de datos
 clustering.type.activity                 = Finalizaci\u00F3n Actividad
