--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -117,7 +117,9 @@ clustering.2Dgraph                       = 2D graph
 clustering.3Dgraph                       = 3D graph
 clustering.analyze                       = Analyze
 clustering.analyze.elbow                 = Elbow method
+clustering.analyze.elbow.yLabel          = Total Within Sum of Square
 clustering.analyze.silhouette            = Silhouette method
+clustering.analyze.silhouette.yLabel     = Average sihouette width
 clustering.centroid                      = Centroid
 clustering.centroids                     = Centroids
 clustering.cluster                       = Cluster
@@ -150,6 +152,7 @@ clustering.numberOfClusters              = Number of clusters
 clustering.reduce                        = Reduce dimension
 clustering.removeLabels                  = Delete selected
 clustering.silhouetteAnalysis            = Silhouette analysis
+clustering.silhouetteWidth               = Silhouette Width
 clustering.standard                      = Standard
 clustering.table                         = Data table
 clustering.type.activity                 = Activity Completion
