--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -142,7 +142,7 @@ clustering.fuzziness                     = Fuzziness factor
 clustering.hierarchical                  = Hierarchical
 clustering.invalid                       = Invalid clutering algorithm.\r\nIt doesn't have the cluster number parameter.
 clustering.label                         = Label
-clustering.logTypes                      = Types of logs
+clustering.logTypes                      = Types
 clustering.manageLabels                  = Manage labels
 clustering.maxIterations                 = Max number of iterations
 clustering.minPts                        = Min. points per cluster
