--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -142,7 +142,7 @@ clustering.fuzziness                     = Factor de borrosidad
 clustering.hierarchical                  = Jer\u00E1rquico
 clustering.invalid                       = Algoritmo de agrupamiento invalido.\r\nNo tiene el par\u00E1metro de n\u00FAmero de agrupaciones.
 clustering.label                         = Etiquetar
-clustering.logTypes                      = Tipos de registros
+clustering.logTypes                      = Tipos
 clustering.manageLabels                  = Gestionar etiquetas
 clustering.maxIterations                 = M\u00E1x. n\u00FAmero de iteraciones
 clustering.minPts                        = M\u00EDn. de puntos por agrupaci\u00F3n
